--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,14 @@
 
 :root {
     --color:#312F3A;
-    --font: 'Montserrat';
+    --font: 'Maven Pro';
+    --font2: "Space Grotesk", sans-serif;
+    --font3: 'Monteserrat', sans-serif;
 }
-.App{
+.App {
+    width: 100%;
+}
+#main{
     padding: 0 8em;
     width: 70%;
     margin: 0 auto;
@@ -19,8 +24,9 @@ height: -webkit-fill-available;
 overflow-x: hidden;}
 
 body {
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--font), sans-serif;
     font-size: 1.6rem;
+    overflow: hidden;
 
     line-height: 1.25;
     overflow-x: hidden;
@@ -37,7 +43,7 @@ h1,h2 {
     color: #312f3a;
     font-size: 7.2rem !important;
     white-space: nowrap;
-    font-family: "Space Grotesk", sans-serif;
+    font-family: var(--font2);
 }
 
 #show{
@@ -59,7 +65,7 @@ li{
 }
 
 @media screen and (max-width: 1060px) {
-    .App {
+    #main {
         min-width: 850px;
     }
     .bg-map::before {
@@ -97,16 +103,29 @@ li{
     }
 }
 
-@media screen and (min-width: 1060px) {
-   
-    
+@media screen and (max-width: 1160px) {
+    #main {
+        padding: 0 4em;
+    }
+    #section5 {
+        margin-top: 5em;
+        margin-bottom: 10em;
+        width: 100%;
+    }
+    #section5__description {
+        font-family: var(--font3);
+        font-size: 1.8rem;
+    }
+    #section5__title {
+        font-size: 5.2rem;
+    }
 }
 @media screen and (max-width: 860px) {
   
         h1,h2 {
             font-size: 5.2rem !important;
         }
-        .App {
+        #main {
             min-width: 100%;
         }
         #list {
@@ -124,19 +143,23 @@ li{
         .bg-map::before {
             top: 39em;
         }
+        .section5__list-item {
+            margin-top: 1.6em;
+        }
       
     }
 @media screen and (mix-width: 860px) {
     #section2__list {
         justify-content: space-between;
     }
+    
     #section2__list li {
         max-width: 32.5%;
     }
 }
 
 @media screen and (max-width: 600px) {
-        .App {
+        #main {
             padding: 2.5em;
             width: 100%;
         }
@@ -173,9 +196,20 @@ li{
 
         #section2__list li {
             margin-bottom: 2em;
+            padding: 0;
         }  
         #section3__title {
             font-size: 3.4rem;
+        }
+        .itm-chart .left span.range {
+            left: -4rem;
+        }
+        #section5_1 {
+            padding-left: 0.3em;
+        }
+
+        #section5_2 {
+            margin-top: 5em;
         }
     }
     @media screen and (min-width: 576px)
@@ -188,7 +222,7 @@ li{
     }
     }
     @media screen and (max-width: 290px) {
-        .App {
+        #main  {
             padding: 1.5em;
         }
         #title {
@@ -214,3 +248,5 @@ li{
         }
         
     }
+
+    
