--- a/src/features/assets/section2.css
+++ b/src/features/assets/section2.css
@@ -4,7 +4,7 @@
 }
 
 #section2__title2 {
-    font-family: "Space Grotesk", sans-serif;
+    font-family: var(--font2);
     color: #312f3a;
     font-size: 6.4rem;
 }
@@ -22,19 +22,23 @@
     
 }
 #section2__list li {
-    list-style-type: none;
-    text-decoration: none;
-    margin-right: 2em;
-    margin-top: 2em;
-}
+        list-style-type: none;
+        text-decoration: none;
+        margin-top: 2em;
+        padding: 0 1em;
+    }
 #section-2, .list .itm {
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 4rem 3rem;
+    padding: 2rem 3rem;
     background: linear-gradient(93.13deg, #e8e6f2 -63.13%, #f6f5fa 178.41%);
-    font-size: 2.4rem;
+    font-size: 2.1rem;
     font-weight: 600;
+}
+
+.itm span{
+    margin-top: 1em;
 }
 
 
