--- a/src/features/assets/section5.css
+++ b/src/features/assets/section5.css
@@ -9,12 +9,12 @@
 }
 
 
-#section5__title {
+.section5__title {
     font-size: 6.4rem;
     font-family: var(--font2);
     margin-bottom: 0.4em;
 }
-#section5__description {
+.section5__description {
     font-family: var(--font3);
     font-size: 2.4rem;
 }
@@ -48,6 +48,43 @@
     background-size: 60%;
     border-radius: 50%;
 }
+
+#section5_3, #section5_4{
+    margin-top: 10em;
+}
+
+#section5__image {
+    width: 100%;
+    background-color: grey;
+    height: 100%;
+}
+
+#section5_3 .btn-primary {
+    color: #ffffff;
+    background-color: #7c6afa;
+    border-color: #7c6afa;
+}
+
+
+#section5_3 .btn {
+    font-size: 1.6rem;
+    display: inline-block;
+    font-weight: 600;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 1.6rem 1.6rem;
+    line-height: 1.5;
+    border-radius: 0;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+
+
+
 
 
 .itm-chart {
