--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,23 @@
     --color:#312F3A;
     --font: 'Maven Pro';
     --font2: "Space Grotesk", sans-serif;
-    --font3: 'Monteserrat', sans-serif;
+    --font3: 'Montserrat', sans-serif;
 }
+.titles {
+    font-family: var(--font2);
+    font-size: 6.4rem;
+}
+.texts {
+    font-size: 2.8rem;
+    font-family: var(--font2);
+    font-weight: 600;
+}
+.texts2 {
+    font-size: 2rem;
+    font-family: var(--font2);
+    font-weight: 600;
+}
+
 .App {
     width: 100%;
 }
@@ -127,7 +142,7 @@ li{
         font-size: 5.6rem;
     }
     .section6__container-list-item {
-        max-width: 250px;
+        max-width: 270px;
     }
     .section6__container-title {
         font-size: 4rem;
@@ -168,6 +183,15 @@ li{
         .section6__container-list-item {
             max-width: 270px;
         }
+        .coma {
+            margin-bottom: 3em;
+        }
+        .block-info {
+            margin-top: 4em;
+        }
+        .nigga {
+            width: 48%;
+        }
       
     }
 @media screen and (max-width: 860px) {
@@ -188,7 +212,7 @@ li{
 
 @media screen and (max-width: 600px) {
         .main {
-            padding: 2.5em;
+            padding: 1.8em;
             width: 100%;
         }
         h1, h2 {
@@ -271,6 +295,73 @@ li{
         #section5 {
             margin-bottom: 1em;
         }
+        .bloks-elem {
+            padding: 2.5rem 3.2rem;
+        }
+        .bloks-elem__author {
+            font-size: 1.5rem;
+        }
+        .bloks-elem__text {
+            font-size: 1.6rem;
+        }
+        .bloks-elem__author-desc {
+            font-size: 1.3rem;
+        }
+        .block-info {
+            margin-top: 3em;
+        }
+        .titles {
+            font-family: var(--font2);
+            font-size: 3.2rem;
+        }
+        .blocks {
+            margin: 0;
+        }
+        .bloks-elem {
+            margin-top: 2em;
+        }
+        #section7 {
+            padding-top: 2em;
+        }
+        .coma {
+            width: 3.8em;
+            margin-bottom: 2em;
+        }
+        .person-min {
+            display: flex;
+            flex-direction: column;
+            width: 50%;
+        }
+        #team {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .nigga {
+            width: 100%;
+        }
+        .nig-image {
+            width: 44%;
+            height: 100%;
+        }
+        .nigga {
+            flex-direction: row;
+            justify-content: space-between;
+        }
+        .name {
+            margin-top: -0.3em;
+        }
+        .nigga-text {
+            margin: 0.2em 0;
+        }
+        #team .bloks-elem__text {
+            font-size: 1.4rem;
+            margin: 0.2em;
+        }
+        .texts {
+            font-size: 2rem;
+            margin-top: 1em;
+        }
 
     }
     @media screen and (min-width: 576px)
@@ -287,7 +378,7 @@ li{
         .main  {
             padding: 1.5em;
         }
-        #title {
+        .titles {
             font-size: 2.5em;
         }
         #description {
