--- a/src/features/assets/section6.css
+++ b/src/features/assets/section6.css
@@ -12,7 +12,7 @@
     margin-left: 1em;
 }
 
-#section6__title {
+.titles {
     font-size: 6.4rem;
     font-family: var(--font2);
     padding-left: 10px;
@@ -20,7 +20,7 @@
 
 .section6__container-title {
     font-size: 4.6rem;
-    font-family: var(--font);
+    font-family: var(--font2);
 }
 
 #section6 .row>* {
@@ -46,7 +46,7 @@
     position: absolute;
     background-color: rgba(110, 110, 110, 0.733);
     left: -1.4em;
-    top: 1.4em;
+    top: 1.17em;
     display: block;
     width: 1.2rem;
     height: 1.2rem;
@@ -59,10 +59,10 @@
 }
 
 .section6__container-image {
+}
+
+.section6__container-img {
     width: 100%;
-    height: 100%;
-    min-height: 25em;
-    background-color: rgba(76,74,87,0.4);
 }
 
 .section6__container-inf {
