--- a/src/features/assets/section10.css
+++ b/src/features/assets/section10.css
@@ -98,7 +98,7 @@
         width: 100%;
         height: 80%;
         font-size: 1.6rem;
-        padding: 0 1em;
+        padding: 0.2em 0.4em;
         line-height: 1.5;
         color: #ffffff;
         background-color: transparent;
